Fixed minor issue causing misalignment of markers

--- a/src/server/css/index.css
+++ b/src/server/css/index.css
@@ -72,7 +72,7 @@ hr {
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	margin: 11px 0px 0px -12px;
+	margin: -7px 0px 0px -7px;
 	z-index: -2;
 }
 
